<resources>
    <string name="app_name">Matricula</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sistema de Matricula</string>
    <string name="nav_header_subtitle">Universidad Nacional de Costa Rica</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="menu_student">Estudiantes</string>
    <string name="menu_cursos">Cursos</string>
    <string name="menu_matricula">Matricular</string>
    <string name="menu_desmatricular">Desmatricular</string>
    <string name="menu_salir">Log-Out</string>
    <string name="title_activity_list__estudiante">List_Estudiante</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Buscar">Buscar</string>
    <string name="id_Estudiante">Cedula</string>
    <string name="nombre_Estudiante">Nombre</string>
    <string name="apellido_Estudiante">Apellido</string>
    <string name="anios_Estudiante">Edad</string>
    <string name="title_activity_list__cursos">List_Cursos</string>
    <string name="id_Curso">ID</string>
    <string name="nombre_Curso">Nombre</string>
    <string name="descripcion_Curso">Descripcion</string>
    <string name="creditos_Curso">Creditos</string>
    <string name="title_activity_list__matricula">List_Matricula</string>
    <string name="codigo_codigo">Codigo Curso</string>
    <string name="title_activity_list__desmatricula">List_Desmatricula</string>
    <string name="Cedula">Cedula</string>
    <string name="password">Contraseña</string>
    <string name="contrasena">Contraseña</string>
    <string name="recontrasena">Verifique contraseña</string>
</resources>